hphp/hack/test/typecheck/array_map_filter/array_map7.php.exp
File "array_map7.php", line 25, characters 3-34:
  _
File "array_map7.php", line 27, characters 25-52:
Invalid argument (Typing[4110])
  File "array_map7.php", line 35, characters 32-50:
  Expected `darray<mixed, bool>`
  File "array_map7.php", line 12, characters 3-16:
  But got `varray<[unresolved]>`
File "array_map7.php", line 27, characters 25-52:
Invalid argument (Typing[4110])
  File "array_map7.php", line 35, characters 32-50:
  Expected `darray<mixed, bool>`
  File "array_map7.php", line 12, characters 3-16:
  But got `varray<bool>`
